Fix wrong z-index
Enact-DCO-1.0-Signed-off-by: Seungcheon Baek (sc.baek@lge.com)

--- a/WizardPanels/WizardPanels.module.less
+++ b/WizardPanels/WizardPanels.module.less
@@ -20,7 +20,7 @@
 	}
 
 	.fullScreenContentHeader {
-		z-index: 9;
+		z-index: 10;
 		flex-direction: row-reverse;
 
 		.steps {
